--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost/assigmnentjava?serverTimezone=UTC
-    username: root
-    password:
+    url: jdbc:mysql://139.59.81.202/assigmnentjava?serverTimezone=UTC
+    username: coba
+    password: qwer@1234
     driver-class-name: com.mysql.jdbc.Driver
   jpa:
     show-sql: true
